syntax = "proto3";

package common;
option go_package = "panelium/proto-gen-go";

message Empty {}

message SimpleMessage {
  string text = 1;
}

message SuccessMessage {
  bool success = 1;
}